--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           sed -i 's|\$FLUTTER_BASE_HREF|/decision_game/|' build/web/index.html
           touch build/web/.nojekyll
           cp build/web/index.html build/web/404.html
+          flutter run
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
