--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Build web
         run: |
+          flutter clean
           flutter build web --release --base-href "/decision-game/"
          
           touch build/web/.nojekyll
